--- a/example.conf.py.example
+++ b/example.conf.py.example
@@ -1,1 +1,4 @@
-database_name = 'YOUR_DB_NAME'
+# change example to the name of your database
+database_name = 'example'
+# override dumping period so to make this database dumping every day
+dumping_period_seconds = 3600 * 24
